--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,9 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Caption images"
+excerpt: "Blend GPT2 with Convoluted Neural Network (CNN), Residual Network (ResNet), and Vision Transformer (ViT) to caption images <br/><img src='/images/500x300.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+Libraries: PyTorch, Transformers, Timm
+Dataset: MS-COCO
+Language: Python
