--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,9 +1,6 @@
 ---
-title: "Caption images"
-excerpt: "Blend GPT2 with Convoluted Neural Network (CNN), Residual Network (ResNet), and Vision Transformer (ViT) to caption images <br/><img src='/images/500x300.png'>"
+title: "Robot path planning"
+excerpt: "Path planning for Outdoor GPS-equipped ground robot.  <br/><img src='/images/500x300.png'>"
 collection: portfolio
 ---
 
-Libraries: PyTorch, Transformers, Timm
-Dataset: MS-COCO
-Language: Python
